<resources>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="about">About</string>
    <string name="about_information">About information</string>
    <string name="access_denied_default">Access denied</string>
    <string name="access_denied_jp">Kinsoku jikou desu!</string>
    <string name="access_denied_zh">Access denied</string>
    <string name="acceleration">Acc</string>
    <string name="account">Account</string>
    <string name="action">Action</string>
    <string name="action_all">All</string>
    <string name="action_flag">Flag</string>
    <string name="action_operate">Operate</string>
    <string name="action_buy">Buy</string>
    <string name="action_none">None</string>
    <string name="action_sell">Sell</string>
    <string name="action_sold">Sold</string>
    <string name="action_deal">Deal</string>
    <string name="action_edit">Edit</string>
    <string name="action_list">List</string>
    <string name="action_import">Import</string>
    <string name="action_exit">Exit</string>
    <string name="action_from">From</string>
    <string name="action_new">New note</string>
    <string name="action_interval">Interval</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorite_all">Favorite all</string>
    <string name="action_favorite_hold">Favorite hold</string>
    <string name="action_favorite_none">Favorite none</string>
    <string name="action_remove_favorite">Remove favorite</string>
    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="action_setting">Setting</string>
    <string name="action_filter">Filter</string>
    <string name="action_trend">Trend</string>
    <string name="action_export">Export</string>
    <string name="period">Period</string>
    <string name="level">Level</string>
    <string name="type">Type</string>
    <string name="flag">Flag</string>
    <string name="direction">Direction</string>
    <string name="vertex_low">VertexLow</string>
    <string name="vertex_high">VertexHigh</string>
    <string name="vertex_net">VertexNet</string>
    <string name="turning">Turning</string>
    <string name="turning_net">TurningNet</string>
    <string name="turning_rate">TurningRate</string>
    <string name="trend">Trend</string>
    <string name="weight">Weight</string>
    <string name="bias">Bias</string>
    <string name="action_download">Download</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_to">To</string>
    <string name="action_order_by_roi">Order by Roi</string>
    <string name="action_order_by_roe">Order by Roe</string>
    <string name="action_order_by_rate">Order by Rate</string>
    <string name="action_order_by_pe">Order by Pe</string>
    <string name="action_order_by_yield">Order by Yield</string>
    <string name="action_order_by_dividend_ratio">Order by DRatio</string>
    <string name="action_order_by_valuation">Order by Valuation</string>
    <string name="added">Added</string>
    <string name="alarm">Alarm</string>
    <string name="app_name">Orion</string>
    <string name="service_running">Service running</string>
    <string name="begin_date">Begin date</string>
    <string name="book_value_per_share">BPS</string>
    <string name="bonus">Bonus</string>
    <string name="bonus_in_year">BonusY</string>
    <string name="cancel">Cancel</string>
    <string name="latest">Latest</string>
    <string name="candle">Candle</string>
    <string name="average">Average</string>
    <string name="filled">Filled</string>
    <string name="direct">Direct</string>
    <string name="monochrome">Monochrome</string>
    <string name="adaptive">Adaptive</string>
    <string name="group">Group</string>
    <string name="draw">Draw</string>
    <string name="stroke">Stroke</string>
    <string name="segment">Segment</string>
    <string name="line">Line</string>
    <string name="outline">OutLine</string>
    <string name="superline">SuperLine</string>
    <string name="trendline">TrendLine</string>
    <string name="merged">Merged</string>
    <string name="cash_flow_per_share">CPS</string>
    <string name="cost">Cost</string>
    <string name="created">Created</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="deal">Deal</string>
    <string name="deal_insert">Deal insert</string>
    <string name="deal_delete">Deal delete</string>
    <string name="deal_edit">Deal edit</string>
    <string name="deal_list">Deal list</string>
    <string name="deal_price">Deal price</string>
    <string name="buy_price">Buy price</string>
    <string name="sell_price">Sell price</string>
    <string name="deal_net">Net</string>
    <string name="deal_volume">Deal volume</string>
    <string name="deal_volume_prompt">Volume:</string>
    <string name="deal_profit">Deal profit</string>
    <string name="stock_deal_date_empty">Deal date is empty</string>
    <string name="stock_deal_volume_empty">Deal volume is empty</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Do you want to delete %s?</string>
    <string name="discount">Discount</string>
    <string name="dividend">Div</string>
    <string name="dividend_in_year">DivY</string>
    <string name="enabled">Enabled</string>
    <string name="r_date">RDate</string>
    <string name="valuation">Valuation</string>
    <string name="yield">Yield</string>
    <string name="yield_in_year">YieldY</string>
    <string name="share">Share</string>
    <string name="market_value">MValue</string>
    <string name="debt_to_net_assets_rato">D2B</string>
    <string name="net_profit">NP</string>
    <string name="net_profit_in_year">NPY</string>
    <string name="net_profit_margin">NPM</string>
    <string name="net_profit_per_share">NPS</string>
    <string name="net_profit_per_share_in_year">NPSY</string>
    <string name="rz_value">RZValue</string>
    <string name="rz_buy">RZBuy</string>
    <string name="rz_buy_rate">RZBRate</string>
    <string name="rz_trend_value">RZTValue</string>
    <string name="rz_trend_rate">RZTRate</string>
    <string name="rz_trend_days">RZTDays</string>
    <string name="rq_value">RQ</string>
    <string name="rz_rate">RZRate</string>
    <string name="roi">Roi</string>
    <string name="roe">Roe</string>
    <string name="download">Download</string>
    <string name="end_date">End date</string>
    <string name="email_hint">Email</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_list">Favorite list</string>
    <string name="financial">Financial</string>
    <string name="notify">Notify</string>
    <string name="stock_financial_chart">Stock financial chart</string>
    <string name="stock_trend_chart">Stock trend chart</string>
    <string name="high">High</string>
    <string name="hold">Hold</string>
    <string name="list">List</string>
    <string name="low">Low</string>
    <string name="main_business_income">MBI</string>
    <string name="main_business_income_in_year">MBIY</string>
    <string name="match">Match</string>
    <string name="match_delete">Match delete</string>
    <string name="match_edit">Match edit</string>
    <string name="match_insert">Match insert</string>
    <string name="match_list">Match list</string>
    <string name="modified">Modified</string>
    <string name="next">next</string>
    <string name="prev_net">PrevNet</string>
    <string name="net">Net</string>
    <string name="next_net">NextNet</string>
    <string name="predict">Predict</string>
    <string name="network_unavailable">Mobile data network not available</string>
    <string name="out_of_trading_hours">Out of trading hours</string>
    <string name="notification_is_off">Notification is off</string>
    <string name="log_is_on">Log is on</string>
    <string name="log_is_off">Log is off</string>
    <string name="setting">Setting</string>
    <string name="setting_period">Period</string>
    <string name="setting_period_year">Year</string>
    <string name="setting_period_month6">Month6</string>
    <string name="setting_period_quarter">Quarter</string>
    <string name="setting_period_month2">Month2</string>
    <string name="setting_period_month">Month</string>
    <string name="setting_period_week">Week</string>
    <string name="setting_period_day">Day</string>
    <string name="setting_period_min60">Min60</string>
    <string name="setting_period_min30">Min30</string>
    <string name="setting_period_min15">Min15</string>
    <string name="setting_period_min5">Min5</string>
    <string name="setting_display">Display</string>
    <string name="setting_debug">Debug</string>
    <string name="setting_debug_log">Log</string>
    <string name="setting_debug_direct">Direct</string>
    <string name="setting_debug_wifi">Wifi</string>
    <string name="ok">OK</string>
    <string name="password_hint">Password</string>
    <string name="pb">Pb</string>
    <string name="pe">Pe</string>
    <string name="pr">Pr</string>
    <string name="ir">IR</string>
    <string name="irr">IRR</string>
    <string name="percent">Percent</string>
    <string name="position">Position</string>
    <string name="prev">prev</string>
    <string name="id">ID</string>
    <string name="price">Price</string>
    <string name="price_change">Change</string>
    <string name="profit">Profit</string>
    <string name="fee">Fee</string>
    <string name="quota">Quota</string>
    <string name="rate">Rate</string>
    <string name="search">Search</string>
    <string name="schedule">Schedule</string>
    <string name="service">Service</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Error!</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="slope">Slope</string>
    <string name="intercept">Intercept</string>
    <string name="mean">Mean</string>
    <string name="std">STD</string>
    <string name="dividend_ratio">DRatio</string>
    <string name="dividend_ratio_in_year">DRatioY</string>
    <string name="start_service">Start</string>
    <string name="stop_service">Stop</string>
    <string name="stock">Stock</string>
    <string name="period_year">Y</string>
    <string name="period_month6">M6</string>
    <string name="period_quarter">Q</string>
    <string name="period_month2">M2</string>
    <string name="period_month">M</string>
    <string name="period_week">W</string>
    <string name="period_day">Day</string>
    <string name="period_min60">M60</string>
    <string name="period_min30">M30</string>
    <string name="period_min15">M15</string>
    <string name="period_min5">M5</string>
    <string name="stock_data_chart">Stock Data chart</string>
    <string name="stock_data_list">Stock Data list</string>
    <string name="stock_name_code">Name</string>
    <string name="stock_code">Code</string>
    <string name="stock_class">Class</string>
    <string name="stock_class_hsa">HSA</string>
    <string name="stock_class_index">Index</string>
    <string name="stock_code_empty">Stock code empty!</string>
    <string name="stock_dividend">Stock Dividend</string>
    <string name="stock_name">Name</string>
    <string name="stock_name_x">Stock name X</string>
    <string name="stock_name_y">Stock name Y</string>
    <string name="stock_insert">Stock Insert</string>
    <string name="stock_exist">Stock exist!</string>
    <string name="volume">Volume</string>
    <string name="value">Value</string>
    <string name="date">Date</string>
</resources>