<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/price"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/price"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/net"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/net"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/roi"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/roi"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/pr"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/pr"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/roe"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/roe"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/pe"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/pe"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/pb"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/pb"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ir"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ir"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/irr"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/irr"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/hold"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/hold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/profit"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/bonus"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bonus"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/bonus_in_year"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bonus_in_year"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cost"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/valuation"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/valuation"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/share"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/share"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/market_value"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/market_value"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/rz_value"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/rz_value"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/rz_buy"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/rz_buy"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/rz_buy_rate"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/rz_buy_rate"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/rz_trend_value"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/rz_trend_value"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/rz_trend_rate"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/rz_trend_rate"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/rz_trend_days"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/rz_trend_days"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/main_business_income"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/main_business_income"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/main_business_income_in_year"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/main_business_income_in_year"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/net_profit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/net_profit"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/net_profit_in_year"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/net_profit_in_year"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/net_profit_margin"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/net_profit_margin"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/debt_to_net_assets_rato"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/debt_to_net_assets_rato"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/book_value_per_share"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/book_value_per_share"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/cash_flow_per_share"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cash_flow_per_share"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/net_profit_per_share"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/net_profit_per_share"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/net_profit_per_share_in_year"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/net_profit_per_share_in_year"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/rate"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dividend"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dividend"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/yield"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/yield"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dividend_ratio"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dividend_ratio"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dividend_in_year"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dividend_in_year"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/yield_in_year"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/yield_in_year"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dividend_ratio_in_year"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dividend_ratio_in_year"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/r_date"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/r_date"
        android:textSize="18sp" />

</LinearLayout>