<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always|withText"
        android:title="@string/action_refresh"></item>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always|withText"
        android:title="@string/action_new"></item>
    <item
        android:id="@+id/action_none"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_none"></item>
    <item
        android:id="@+id/action_operate"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_operate"></item>
    <item
        android:id="@+id/action_buy"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_buy"></item>
    <item
        android:id="@+id/action_sell"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sell"></item>
    <item
        android:id="@+id/action_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_all"></item>
    <item
        android:id="@+id/action_trend"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_trend"></item>
    <item
        android:id="@+id/action_quant"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_quant"></item>

</menu>