<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/price"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/price"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/net"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/net"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/buy"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/buy"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sell"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sell"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/volume"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/volume"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/value"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/value"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/bonus"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bonus"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/yield"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/yield"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/fee"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/fee"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/profit"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/account"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/account"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/type"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/type"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/created"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/created"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/modified"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/modified"
        android:textSize="18sp" />

</LinearLayout>