<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_prev"

        android:orderInCategory="100"
        android:title="@string/prev"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_next"

        android:orderInCategory="100"
        android:title="@string/next"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/action_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deal"
        android:orderInCategory="100"
        android:title="@string/action_deal"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_trend"
        android:orderInCategory="100"
        android:title="@string/action_trend"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/action_backup"
        app:showAsAction="never" />

</menu>