<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always|withText"
        android:title="@string/action_new"></item>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_refresh" />
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_setting" />
    <item
        android:id="@+id/action_load"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_load"></item>
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_save"></item>
    <item
        android:id="@+id/action_deal"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_deal" />
    <item
        android:id="@+id/action_favorite_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_favorite_all" />
    <item
        android:id="@+id/action_favorite_none"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_favorite_none" />
    <item
        android:id="@+id/action_notify_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_notify_all" />
    <item
        android:id="@+id/action_notify_none"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_notify_none" />
    <item
        android:id="@+id/action_backup_database"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_backup_database" />
</menu>